[TASK] Switch to the native YAML format
The Crowdin documentation shows a JSON-like syntax but Crowdin
will automatically change it to native YAML upon integration.

--- a/.crowdin.yml
+++ b/.crowdin.yml
@@ -1,10 +1,6 @@
-"preserve_hierarchy": true
-"files": [
-  {
-    "source": "/Resources/Private/Language/*.xlf",
-    "translation": "/%original_path%/%two_letters_code%.%original_file_name%",
-    "ignore": [
-      "/**/%two_letters_code%.%original_file_name%"
-    ]
-  }
-]
+preserve_hierarchy: 1
+files:
+  - source: /Resources/Private/Language/*.xlf
+    translation: /%original_path%/%two_letters_code%.%original_file_name%
+    ignore:
+      - /**/%two_letters_code%.%original_file_name%
